<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.visitantes.AddVisitantesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="328dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre_del_visitante"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/campoEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/horaEntrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="@color/primary"
                android:textAlignment="viewStart"
                android:ems="10"
                android:hint="Hora de Entrada"
                android:textSize="18dp"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/iconCalendarEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/horaEntrada"
                app:layout_constraintTop_toTopOf="@+id/horaEntrada"
                android:src="@drawable/ic_time"
                app:tint="@color/white"
                android:background="@drawable/circle_button_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/campoSalida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/horaSalida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="@color/primary"
                android:textAlignment="viewStart"
                android:ems="10"
                android:hint="Hora de Salida"
                android:textSize="18dp"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/iconCalendarExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/horaSalida"
                app:layout_constraintTop_toTopOf="@+id/horaSalida"
                android:src="@drawable/ic_time"
                app:tint="@color/white"
                android:background="@drawable/circle_button_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/telefono"
            android:layout_width="328dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/numero_de_telefono"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/horaSalida"
            app:layout_constraintStart_toStartOf="@+id/horaSalida"
            app:layout_constraintTop_toBottomOf="@+id/horaSalida"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/title"
            android:layout_width="96dp"
            android:layout_height="28dp"
            android:layout_marginTop="25dp"
            android:text="@string/transporte"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/cedula"
            app:layout_constraintStart_toStartOf="@+id/cedula"
            app:layout_constraintTop_toBottomOf="@+id/cedula"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/tipo_de_vehiculo"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <AutoCompleteTextView
                android:id="@+id/tipoVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/caracterisicas"
            android:layout_width="328dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Características del Vehículo"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caracterisicas">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAceptar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:text="CANCELAR"
            android:textColor="@color/primary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>